Seprate code in modules

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 
 <body>
+
     <div class="project-wraper">
+        <p class="time"></p>
         <nav class="navbar">
             <span>Awesome Books</span>
             <ul class="nav-list">
@@ -19,14 +21,17 @@
                 <li class="nav-list-item"><a>Add New</a></li>
                 <li class=" line-seperator"></li>
                 <li class="nav-list-item"><a>Contact</a></li>
+                
             </ul>
         </nav>
+       
         <section class="books-wraper">
             <h1 class="books-header">All Awesome Books</h1>
             <ul class="books">
                 <!-- Books generated Dynamically with JavaScript -->
             </ul>
         </section>
+
         <div class="books-form">
             <h1 id="add-new-books">Add a new book</h1>
             <form class="add-books">
@@ -57,7 +62,7 @@
             <h4>Copyright: Benjmain & Omar @ 2022</h4>
         </footer>
     </div>
-    <script type="module" src="./index.js"></script>
+    <script src="./index.js" type="module"></script>
 
 
 </body>
